--- a/playground/index.html
+++ b/playground/index.html
@@ -8,7 +8,7 @@
   <title>Farm + React + TS</title>
 </head>
 <body>
-  <img src="./src/assets/none.webp" alt="">
+  <img src="./src/assets/none.webp" style="display: block;width: 100px;height: 100px;" alt="">
   <div id="root"></div>
   <script src="./src/index.tsx"></script>
 </body>
